# anna-keyboard-layout

./: .gitignore  Cargo.toml  effort.json  layouts.list  movement.toml
src/: generation.rs  layout.rs  main.rs  ngram.rs  score.rs  xgrams.rs
texts/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt
