[package]
name = "layout_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
serde_json = "1.0"
utf8-read = "0.4.0"
rayon = "1.6.1"
toml = "0.7.2"
thousands = "0.2.0"
rand = "0.8.5"
once_cell = "1.17.1"
chrono = "0.4.24"
num_cpus = "1.15.0"
clap = { version = "4.1.10", features = ["derive"] }
crc32fast = "1.3.2"
fs_extra = "1.3.0"
bincode = "1.3.3"
serde = { version = "1.0.157", features = ["derive"] }
